<resources>
    <string name="app_name">Food Planner</string>
    <string name="slogan">Meals to Heal</string>
    <string name="Already_have_an_account">Already have an account?</string>
    <string name="SKIP">SKIP</string>
    <string name="SIGN_UP_WITH_EMAIL">SIGN UP WITH EMAIL</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="Next">Next</string>
    <string name="Login">Login</string>
    <string name="Daily_Inspiration">Daily Inspiration</string>
    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="Favorite">Favorite</string>
    <string name="Meal_Plan">Meal Plan</string>
    <string name="My_Favorites_Recipes">My Favorites Recipes</string>
    <string name="Search_by_Ingredients">Search by Ingredients</string>
    <string name="Search_by_Categories">Search by Categories</string>
    <string name="View_All">View All</string>
    <string name="Search_by_Countries">Search by Countries</string>
    <string name="Search_Recipes">Search Recipes</string>
    <string name="Selected_Ingredients">Selected Ingredients</string>
    <string name="Suggested_For_You">Suggested For You</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="ADD">ADD</string>
    <string name="Backup">Backup</string>
    <string name="Logout">Logout</string>
    <string name="Ingredients">Ingredients</string>
    <string name="Add_to_Meal_Plan">Add to Meal Plan</string>
    <string name="Steps">Steps</string>
    <string name="Video">Video</string>
    <string name="Add_Favorite_Recipe">Add Favorite recipe</string>
    <string name="Search_New_Recipe">Search New Recipe</string>
    <string name="This_Week">This Week</string>
    <string name="Last_Week">Last Week</string>
    <string name="Next_Week">Next Week</string>
    <string name="Country_Name">Country Name</string>
    <string name="Quantity">Quantity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Profile">Profile</string>

</resources>