<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_black_icon"
        android:enabled="true"
        android:title="@string/Home" />
    <item
        android:id="@+id/searchFragment2"
        android:icon="@drawable/search_black_icon"
        android:enabled="true"
        android:title="@string/Search" />
    <item
        android:id="@+id/favScreenFragment"
        android:icon="@drawable/favorite_filled_black_icon"
        android:enabled="true"
        android:title="@string/Favorite" />

    <item
        android:id="@+id/mealPlanFragment"
        android:icon="@drawable/calender_black_icon"
        android:enabled="true"
        android:title="@string/Meal_Plan"
    />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/user_icon"
        android:enabled="true"
        android:title="@string/Profile" />
</menu>