<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupScreen.SignupScreen">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/used_pink"
        android:clickable="true"
        android:elevation="20dp"
        android:background="@drawable/button"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/slogan"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/name_EditText"
        android:layout_width="250dp"
        android:paddingStart="30dp"
        android:layout_height="40dp"
        android:background="@drawable/edittext"
        android:layout_marginTop="16dp"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/email_EditText"
        android:layout_width="250dp"
        android:paddingStart="30dp"
        android:layout_height="40dp"
        android:background="@drawable/edittext"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/name_EditText"
        app:layout_constraintStart_toStartOf="@+id/name_EditText"
        app:layout_constraintTop_toBottomOf="@+id/name_EditText" />

    <EditText
        android:id="@+id/password_EditText"
        android:layout_width="250dp"
        android:paddingStart="30dp"
        android:layout_height="40dp"
        android:background="@drawable/edittext"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/email_EditText"
        app:layout_constraintStart_toStartOf="@+id/email_EditText"
        app:layout_constraintTop_toBottomOf="@+id/email_EditText" />

    <EditText
        android:id="@+id/confirmPassword_EditText"
        android:layout_width="250dp"
        android:paddingStart="30dp"
        android:layout_height="40dp"
        android:background="@drawable/edittext"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/password_EditText"
        app:layout_constraintStart_toStartOf="@+id/password_EditText"
        app:layout_constraintTop_toBottomOf="@+id/password_EditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_btn"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/used_pink"
        android:text="@string/Next"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/confirmPassword_EditText"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="@+id/confirmPassword_EditText"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword_EditText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="38dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="273dp"
        android:layout_height="307dp"
        android:layout_marginTop="-1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />


</androidx.constraintlayout.widget.ConstraintLayout>