<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcomeScreen.WelcomeScreen"
    android:background="@drawable/welcome_transparent_img">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skip_btn"
        android:layout_width="70dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:text="@string/SKIP"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/slogan"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/google_btn"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/google_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/facebook_btn"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/used_blue"
        android:clickable="true"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/facebook_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/google_btn"
        app:layout_constraintTop_toTopOf="@+id/google_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupWithEmail_btn"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:drawableStart="@drawable/letter_icon"
        android:gravity="center"
        android:paddingStart="35dp"
        android:paddingEnd="30dp"
        android:text="@string/SIGN_UP_WITH_EMAIL"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/facebook_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/google_btn"
        app:layout_constraintTop_toBottomOf="@+id/google_btn" />

    <TextView
        android:id="@+id/Already_have_an_account_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:text="@string/Already_have_an_account"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/signupWithEmail_btn" />

    <TextView
        android:id="@+id/login_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@+id/Already_have_an_account_textView"
        app:layout_constraintTop_toTopOf="@+id/Already_have_an_account_textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>