<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealPlan.view.MealPlanFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/thisWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="144dp"
                android:layout_marginTop="16dp"
                android:text="@string/This_Week"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="18dp"
                android:text="@string/Monday"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sundayRecyclerView" />

            <TextView
                android:id="@+id/textTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="18dp"
                android:text="@string/Tuesday"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mondayRecyclerView" />

            <TextView
                android:id="@+id/textWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="18dp"
                android:text="@string/Wednesday"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tusedayRecyclerView" />

            <TextView
                android:id="@+id/textThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="18dp"
                android:text="@string/Thursday"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wednesdayRecyclerView" />

            <TextView
                android:id="@+id/textSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/Sunday"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thisWeek" />

            <TextView
                android:id="@+id/textFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="18dp"
                android:text="@string/Friday"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thursdayRecycleView" />

            <TextView
                android:id="@+id/textSaturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="18dp"
                android:text="@string/Saturday"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fridayRecycleView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sundayRecyclerView"
                android:layout_width="340dp"
                android:layout_height="98dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@+id/textSunday"
                app:layout_constraintTop_toBottomOf="@+id/textSunday" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mondayRecyclerView"
                android:layout_width="340dp"
                android:layout_height="98dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@+id/textMonday"
                app:layout_constraintTop_toBottomOf="@+id/textMonday" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tusedayRecyclerView"
                android:layout_width="340dp"
                android:layout_height="98dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@+id/textTuesday"
                app:layout_constraintTop_toBottomOf="@+id/textTuesday" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wednesdayRecyclerView"
                android:layout_width="340dp"
                android:layout_height="98dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@+id/textWednesday"
                app:layout_constraintTop_toBottomOf="@+id/textWednesday" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/thursdayRecycleView"
                android:layout_width="340dp"
                android:layout_height="98dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@+id/textThursday"
                app:layout_constraintTop_toBottomOf="@+id/textThursday" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fridayRecycleView"
                android:layout_width="340dp"
                android:layout_height="98dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@+id/textFriday"
                app:layout_constraintTop_toBottomOf="@+id/textFriday" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/saturdayRecycleView"
                android:layout_width="340dp"
                android:layout_height="98dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@+id/textSaturday"
                app:layout_constraintTop_toBottomOf="@+id/textSaturday" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>